myCompiler/out/production/myCompiler/Compiler/Parser/MotherKnowsBest.g4
grammar MotherKnowsBest;

program : (classDeclaration | functionDeclaration | varDeclaration)+;

classDeclaration : 'class' IDENTIFIER '{' (varDeclaration | functionDeclaration)+ '}';

functionDeclaration : type IDENTIFIER? '(' (type IDENTIFIER (',' type IDENTIFIER)*)? ')' blockStatement;

varDeclaration : type IDENTIFIER ('=' expression)? (','IDENTIFIER ('=' expression)?)*';';

statement : blockStatement
    | expressionStatement
    | ifStatement
    | loopStatement
    | jumpStatement
    | varDeclaration
    ;


blockStatement: '{' statement* '}';

expressionStatement : expression? ';';

ifStatement: 'if' '(' expression ')' statement ('else' statement)?;

loopStatement : 'while' '(' expression ')' statement                            #whileStatement
        | 'for' '(' expression? ';' expression? ';' expression? ')' statement   #forStatement
        ;

jumpStatement :'return' expression? ';' #returnStatement
        | 'break' ';' #breakStatement
        | 'continue' ';' #continueStatement
        ;

expression : constant   #constantExpression
        | IDENTIFIER   #variableExpression
        | '(' expression ')' #containedExpression
        | expression operator=('++'|'--') #selfExpression
        | operator=('+'|'-'|'~'|'!'|'++'|'--') expression #unaryExpression
        | expression operator=('*'|'/'|'%') expression #muldivmodExpression
        | expression operator=('+'|'-') expression #addminusExpression
        | expression operator=('<<'|'>>') expression #shiftExpression
        | expression operator=('<'|'>'|'<='|'>='|'!='|'==') expression #relationExpression
        | expression operator='&' expression #andExpression
        | expression operator='^' expression #xorExpression
        | expression operator='|' expression #orExpression
        | expression operator='&&' expression #logicalAndExpression
        | expression operator='||' expression #logicalOrExpression
        | <assoc=right> expression operator='=' expression #assignmentExpression
        | 'new' type ('[' expression? ']')* #newExpression
        | expression '[' expression ']' #arrayExpression
        | expression '.'  IDENTIFIER #memberExpression
        | expression '(' (expression (',' expression)*) ? ')' #functionCallExpression
        ;

type : 'void' #voidType
    | 'int' #intType
    | 'bool' #boolType
    | 'string' #stringType
    | IDENTIFIER #classType
    | type '[' ']' #arrayType
    ;

constant : ('true'|'false') #boolConstant
    | INTEGER #intConstant
    | STRING #stringConstant
    | 'null' #nullConstant
    ;

IDENTIFIER : [a-zA-Z_]([a-zA-Z_0-9])*;

INTEGER : [0-9]+;

STRING : '\"' CHAR* '\"';

fragment

CHAR	:	~["\\\r\n]
		|	'\\' ['"?abfnrtv\\]
		;

LINECOMMENT :   '//' ~[\r\n]*   ->  skip;

WHITESPACE  :   [ \t\r\n]+  ->  skip;
